Finished front-end integration and updated docs
