# routes/index.js
@@ -4,86 +4,71 @@ const router = express.Router();
 const {checkAuthenticated,
     checkAuthorized,
     getAllEntries,
+    getImageUrl,
     getEntryById,
-    deleteUserById,
     changeUserPassword,
     getUserCart,
+    addOneToCart,
     addToCart,
-    updateCart,
+    updateWholeCart,
     deleteCart,
     deleteCartItem,
     checkoutCart,
-    getOrders
+    getOrders,
+    getOrderProducts
     } = require('../util/helpers');
 
 // Products endpoints
-router.get('/products', checkAuthenticated, async (req, res, next) => {
+router.get('/products', async (req, res, next) => {
     try {
         let products = await getAllEntries('products');
-        res.status(200).send(products.rows);
+        for(const item of products.rows){
+        item.image = getImageUrl(item.image);
+        item.image2 = getImageUrl(item.image2);
+        item.image3 = getImageUrl(item.image3);
+        };
+        res.status(200).json(products.rows);
     } catch(err) {
         console.log(err);
-        res.status(400).send({ message: err.message });
+        res.status(400).json(err.message);
     }
 });
-router.get('/products/:id', checkAuthenticated, async (req, res, next) => {
+router.get('/products/:id', async (req, res, next) => {
     try {
         let products = await getEntryById('products', req.params.id);
         if(products.rows.length > 0){
-            res.status(200).send(products.rows[0]);
+            res.status(200).json(products.rows[0]);
         } else {
-            res.status(404).send({ "error": 'Invalid product ID' })
+            res.status(404).json({ message: 'Invalid product ID' })
         }
     } catch(err) {
         console.log(err);
-        res.status(400).send({ message: err.message });
+        res.status(400).json(err.message);
     }
 });
 
 // Users endpoints
-router.get('/users', checkAuthenticated, checkAuthorized, async (req, res, next) => {
-    try {
-        let users = await getAllEntries('users');
-        res.status(200).send(users.rows);
-    } catch(err) {
-        console.log(err);
-        res.status(400).send({ message: err.message });
-    }
-});
 router.get('/users/:user_id', checkAuthenticated, checkAuthorized, async (req, res, next) => {
     try {
         let users = await getEntryById('users', req.params.user_id);
         if(users.rows.length > 0){
-            res.status(200).send(users.rows[0]);
+            res.status(200).json(users.rows[0]);
         } else {
             console.log('Invalid user ID');
-            res.status(404).send({ "error": 'Invalid user ID' });
+            res.status(404).json({ message: 'Invalid user ID' });
         }
     } catch(err) {
         console.log(err);
-        res.status(400).send({ message: err.message });
-    }
-});
-router.delete('/users/:user_id', checkAuthenticated, checkAuthorized, async (req, res, next) => {
-    try {
-        let response = await deleteUserById(req.params.user_id);
-        res.status(204).send(response);
-        req.logout(function(err) {
-        if(err) return next(err);
-        console.log('Logout Success.');
-    })
-    } catch(err) {
-        console.log(err);
-        res.status(400).send({ message: err.message });
+        res.status(400).json(err.message);
     }
 });
 router.put('/users/:user_id', checkAuthenticated, checkAuthorized, async (req, res, next) => {
     try {
         let response = await changeUserPassword(req.params.user_id, req.body.password);
-        res.status(200).send(response);
+        res.status(200).json(response);
     } catch(err) {
         console.log(err);
-        res.status(400).send({ message: err.message });
+        res.status(400).json(err.message);
     }
 });
 
@@ -91,86 +76,91 @@ router.put('/users/:user_id', checkAuthenticated, checkAuthorized, async (req, r
 router.get('/cart/:user_id', checkAuthenticated, checkAuthorized, async (req, res, next) => {
     try {
         let response = await getUserCart(req.params.user_id);
-        res.status(200).send(response.rows);
+        res.status(200).json(response.rows);
     } catch(err) {
         console.log(err);
-        res.status(400).send({ message: err.message });
+        res.status(400).json(err.message);
     }
 });
 router.post('/cart/:user_id', checkAuthenticated, checkAuthorized, async (req, res, next) => {
     try{
-        let response = await addToCart(req.params.user_id, req.body.product_id, req.body.quantity);
-        res.status(201).send(response);
+        let response = await addOneToCart(req.params.user_id, req.body.product_id, req.body.quantity);
+        res.status(201).json(response);
     } catch(err) {
         console.log(err);
-        res.status(400).send({ message: err.message });
+        res.status(400).json(err.message);
     }
 });
 router.delete('/cart/:user_id', checkAuthenticated, checkAuthorized, async (req, res, next) => {
     try {
         let response = await deleteCart(req.params.user_id);
-        res.status(204).send(response);
+        res.status(204).json(response);
     } catch(err) {
         console.log(err);
-        res.status(400).send({ message: err.message });
+        res.status(400).json(err.message);
     }
 });
-router.put('/cart/:user_id/:product_id', checkAuthenticated, checkAuthorized, async (req, res, next) => {
+
+router.put('/cart/:user_id', checkAuthenticated, checkAuthorized, async (req, res, next) => {
     try{
-        let response = await updateCart(req.params.user_id, req.params.product_id, req.body.quantity);
-        res.status(201).send(response);
+        let response = await updateWholeCart(req.params.user_id, req.body);
+        for(const item of response){
+            item.image = getImageUrl(item.image)
+            };
+        res.status(201).json(response);
     } catch(err) {
         console.log(err);
-        res.status(400).send({ message: err.message });
+        res.status(400).json(err.message);
+    }
+});
+
+router.put('/cart/:user_id/:product_id', checkAuthenticated, checkAuthorized, async (req, res, next) => {
+    try{
+        let response = await addToCart(req.params.user_id, req.body.product_id, req.body.quantity);
+        res.status(201).json(response);
+    } catch(err) {
+        console.log(err);
+        res.status(400).json(err.message);
     }
 });
 router.delete('/cart/:user_id/:product_id', checkAuthenticated, checkAuthorized, async (req, res, next) => {
     try {
         let response = await deleteCartItem(req.params.user_id, req.params.product_id);
-        res.status(204).send(response);
+        res.status(204).json(response);
     } catch(err) {
         console.log(err);
-        res.status(400).send({ message: err.message });
+        res.status(400).json(err.message);
     }
 });
 
 // Orders endpoints
-router.get('/orders', checkAuthenticated, checkAuthorized, async (req, res, next) => {
-    try {
-        let response = await getOrders(null, null);
-        res.status(200).send(response.rows);
-    } catch(err) {
-        console.log(err);
-        res.status(400).send({ message: err.message });
-    }
-});
 router.get('/orders/:user_id', checkAuthenticated, checkAuthorized, async (req, res, next) => {
     try {
-        let response = await getOrders(req.params.user_id, null);;
-        res.status(200).send(response.rows);
+        let response = await getOrders(req.params.user_id);;
+        res.status(200).json(response.rows);
     } catch(err) {
         console.log(err);
-        res.status(400).send({ message: err.message });
+        res.status(400).json(err.message);
     }
 });
 router.get('/orders/:user_id/:order_id', checkAuthenticated, checkAuthorized, async (req, res, next) => {
     try {
-        let response = await getOrders(req.params.user_id, req.params.order_id);;
-        res.status(200).send(response.rows);
+        let response = await getOrderProducts(req.params.order_id);;
+        res.status(200).json(response.rows);
     } catch(err) {
         console.log(err);
-        res.status(400).send({ message: err.message });
+        res.status(400).json(err.message);
     }
 });
 
 // Checkout endpoint
 router.post('/cart/:user_id/checkout', checkAuthenticated, checkAuthorized, async (req, res, next) => {
     try {
-        let response = await checkoutCart(req.params.user_id);
-        res.status(200).send(response);
+        let response = await checkoutCart(req.params.user_id, req.body.date, req.body.total_cost);
+        res.status(200).json(response);
     } catch(err) {
         console.log(err);
-        res.status(400).send({ "error": "Not enough stock to complete order" });
+        res.status(400).json('Not enough stock to complete order');
     }
 });
 
